--- a/docs/guide/cra.mdx
+++ b/docs/guide/cra.mdx
@@ -2,8 +2,8 @@
 title: Material Tailwind with Create React App - Installation Guide
 description: Learn how to use Material Tailwind components with Create React App and Tailwind CSS to easily create elegant and flexible pages.
 github: guide/cra
-prev: docs/react/guide/gatsby
-next: docs/react/theming
+prev: docs/html/guide/gatsby
+next: docs/html/theming
 ---
 
 # Material Tailwind with CRA
@@ -16,7 +16,7 @@ Learn how to setup and install `@material-tailwind/react` with Create React App.
 
 First, create a new Create React App project using the command below, it will create a new Create React App project.
 
-For more details check the <Link href="https://create-react-app.dev/docs/getting-started?ref=material-tailwind" target="_blank">Create React App Official Documentation</Link>.
+For more details check the <Link href="https://create-react-app.dev/docs/getting-started?ref=david-ui" target="_blank">Create React App Official Documentation</Link>.
 
 <CodePreview>
 ```bash
