--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -52,11 +52,11 @@ Start exploring the library today and discover how David UI can transform your w
 
 Basic building blocks of the interface that drive interactivity and functionality.
 
-* **[Button](https://creative-tim.com/david-ui/docs/html/button)**: Interactive buttons for various actions.
-* **[Button Group](https://creative-tim.com/david-ui/docs/html/button-group)**: Group multiple buttons for related actions.
-* **[Icon Button](https://creative-tim.com/david-ui/docs/html/icon-button)**: Compact buttons with icons for visual clarity.
-* **[Rating Bar](https://creative-tim.com/david-ui/docs/html/rating)**: Allow users to rate with visual indicators.
-* **[Switch](https://creative-tim.com/david-ui/docs/html/switch)**: Toggle between two states (on/off).
+* **[Button](https://www.creative-tim.com/david-ui/docs/html/button)**: Interactive buttons for various actions.
+* **[Button Group](https://www.creative-tim.com/david-ui/docs/html/button-group)**: Group multiple buttons for related actions.
+* **[Icon Button](https://www.creative-tim.com/david-ui/docs/html/icon-button)**: Compact buttons with icons for visual clarity.
+* **[Rating Bar](https://www.creative-tim.com/david-ui/docs/html/rating)**: Allow users to rate with visual indicators.
+* **[Switch](https://www.creative-tim.com/david-ui/docs/html/switch)**: Toggle between two states (on/off).
 
 ---
 
@@ -64,10 +64,10 @@ Basic building blocks of the interface that drive interactivity and functionalit
 
 Components for gathering user input and providing interaction fields.
 
-* **[Checkbox](https://creative-tim.com/david-ui/docs/html/checkbox)**: Enable users to select one or multiple options.
-* **[Input](https://creative-tim.com/david-ui/docs/html/input)**: Accept user input through text fields.
-* **[Radio](https://creative-tim.com/david-ui/docs/html/radio)**: Provide single-option selection from a list.
-* **[Textarea](https://creative-tim.com/david-ui/docs/html/textarea)**: Multi-line input field for longer text entries.
+* **[Checkbox](https://www.creative-tim.com/david-ui/docs/html/checkbox)**: Enable users to select one or multiple options.
+* **[Input](https://www.creative-tim.com/david-ui/docs/html/input)**: Accept user input through text fields.
+* **[Radio](https://www.creative-tim.com/david-ui/docs/html/radio)**: Provide single-option selection from a list.
+* **[Textarea](https://www.creative-tim.com/david-ui/docs/html/textarea)**: Multi-line input field for longer text entries.
 
 
 ---
@@ -76,20 +76,20 @@ Components for gathering user input and providing interaction fields.
 
 Components to present data and information in a structured, interactive, or aesthetic manner.
 
-* **[Accordion](https://creative-tim.com/david-ui/docs/html/accordion)**: Collapsible sections for organizing content.
-* **[Alert](https://creative-tim.com/david-ui/docs/html/alert)**: Display notifications or messages to users.
-* **[Avatar](https://creative-tim.com/david-ui/docs/html/avatar)**: Showcase user profile pictures, icons, or initials.
-* **[Badge](https://creative-tim.com/david-ui/docs/html/badge)**: Add small notifications or status indicators.
-* **[Card](https://creative-tim.com/david-ui/docs/html/card)**: Display information in modular, card-based layouts.
-* **[Chip](https://creative-tim.com/david-ui/docs/html/chip)**: Highlight small blocks of information or actions.
-* **[Image](https://creative-tim.com/david-ui/docs/html/image)**: Showcase images with various styling options.
-* **[List](https://creative-tim.com/david-ui/docs/html/list)**: Display items in structured, ordered, or unordered formats.
-* **[Progress Bar](https://creative-tim.com/david-ui/docs/html/progress)**: Indicate completion or loading status.
-* **[Spinner](https://creative-tim.com/david-ui/docs/html/spinner)**: Add loading indicators for processes in progress.
-* **[Table](https://creative-tim.com/david-ui/docs/html/table)**: Display tabular data in an organized, responsive format.
-* **[Timeline](https://creative-tim.com/david-ui/docs/html/timeline)**: Represent events or progress in chronological order.
-* **[Typography](https://creative-tim.com/david-ui/docs/html/typography)**: Pre-styled text elements like headers, paragraphs, and more.
-* **[Video](https://creative-tim.com/david-ui/docs/html/video)**: Embed and display video content.
+* **[Accordion](https://www.creative-tim.com/david-ui/docs/html/accordion)**: Collapsible sections for organizing content.
+* **[Alert](https://www.creative-tim.com/david-ui/docs/html/alert)**: Display notifications or messages to users.
+* **[Avatar](https://www.creative-tim.com/david-ui/docs/html/avatar)**: Showcase user profile pictures, icons, or initials.
+* **[Badge](https://www.creative-tim.com/david-ui/docs/html/badge)**: Add small notifications or status indicators.
+* **[Card](https://www.creative-tim.com/david-ui/docs/html/card)**: Display information in modular, card-based layouts.
+* **[Chip](https://www.creative-tim.com/david-ui/docs/html/chip)**: Highlight small blocks of information or actions.
+* **[Image](https://www.creative-tim.com/david-ui/docs/html/image)**: Showcase images with various styling options.
+* **[List](https://www.creative-tim.com/david-ui/docs/html/list)**: Display items in structured, ordered, or unordered formats.
+* **[Progress Bar](https://www.creative-tim.com/david-ui/docs/html/progress)**: Indicate completion or loading status.
+* **[Spinner](https://www.creative-tim.com/david-ui/docs/html/spinner)**: Add loading indicators for processes in progress.
+* **[Table](https://www.creative-tim.com/david-ui/docs/html/table)**: Display tabular data in an organized, responsive format.
+* **[Timeline](https://www.creative-tim.com/david-ui/docs/html/timeline)**: Represent events or progress in chronological order.
+* **[Typography](https://www.creative-tim.com/david-ui/docs/html/typography)**: Pre-styled text elements like headers, paragraphs, and more.
+* **[Video](https://www.creative-tim.com/david-ui/docs/html/video)**: Embed and display video content.
 
 ---
 
@@ -97,9 +97,9 @@ Components to present data and information in a structured, interactive, or aest
 
 Components for guiding users through your application or site.
 
-* **[Breadcrumb](https://creative-tim.com/david-ui/docs/html/breadcrumb)**: Show navigation paths for user orientation.
-* **[Pagination](https://creative-tim.com/david-ui/docs/html/pagination)**: Divide content into manageable, clickable pages.
-* **[Stepper](https://creative-tim.com/david-ui/docs/html/stepper)**: Guide users through multi-step workflows.
+* **[Breadcrumb](https://www.creative-tim.com/david-ui/docs/html/breadcrumb)**: Show navigation paths for user orientation.
+* **[Pagination](https://www.creative-tim.com/david-ui/docs/html/pagination)**: Divide content into manageable, clickable pages.
+* **[Stepper](https://www.creative-tim.com/david-ui/docs/html/stepper)**: Guide users through multi-step workflows.
 
 
 ---
@@ -108,10 +108,10 @@ Components for guiding users through your application or site.
 
 Components for organizing and structuring content within your application.
 
-* **[Footer](https://creative-tim.com/david-ui/docs/html/footer)**: Add a footer section for navigation or additional information.
-* **[Gallery](https://creative-tim.com/david-ui/docs/html/gallery)**: Display a collection of images in a grid or carousel format.
-* **[Navbar](https://creative-tim.com/david-ui/docs/html/navbar)**: Create navigation bars for top-level site or app navigation.
-* **[Sidebar](https://creative-tim.com/david-ui/docs/html/sidebar)**: Add side panels for navigation or supplemental content.
+* **[Footer](https://www.creative-tim.com/david-ui/docs/html/footer)**: Add a footer section for navigation or additional information.
+* **[Gallery](https://www.creative-tim.com/david-ui/docs/html/gallery)**: Display a collection of images in a grid or carousel format.
+* **[Navbar](https://www.creative-tim.com/david-ui/docs/html/navbar)**: Create navigation bars for top-level site or app navigation.
+* **[Sidebar](https://www.creative-tim.com/david-ui/docs/html/sidebar)**: Add side panels for navigation or supplemental content.
 
 
 
