--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -12,7 +12,7 @@ next: docs/html/release-notes
 
 ## MIT License 
 
-Copyright (c) <CurrentYear /> David UI by <Link href="https://www.creative-tim.com/?ref=david-ui" target="_blank">Creative Tim</Link>
+Copyright (c) 2020-<CurrentYear /> David UI by <Link href="https://www.creative-tim.com/?ref=david-ui" target="_blank">Creative Tim</Link>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
