--- a/docs/popover.mdx
+++ b/docs/popover.mdx
@@ -4,7 +4,7 @@ description: Create interactive popovers with Tailwind CSS and David UI. Enhance
 github: popover
 ---
 
-<ScriptLoader src="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit@david-ui-js/dist%20/david-ui-tailwind.min.js" />
+<ScriptLoader />
 
 <InfoBadge />
 
@@ -75,12 +75,53 @@ A detailed Popover component tailored for repository or project information. Inc
 --- 
 
 ## Required Script
-The popover component requires two script files to function properly:
 
-1. The Popper.js library for positioning calculations
-2. The David UI script for popover functionality
+The Popover component in david-ai requires JavaScript to handle the popover functionality and positioning. The library provides smooth transitions and toggle behavior through data attributes, powered by Popper.js for accurate positioning.
 
-Add these scripts to the bottom of your HTML file in the following order:
+### Installation
 
+To use the Popover component in your project, you first need to install the `david-ai` library via npm:
 
-<CodePreviewTailwindClasses codeSnippet={`<script src="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit@david-ui-js/dist%20/david-ui-tailwind.min.js" defer></script>`}/>
+<CodePreviewTailwindClasses codeSnippet={`npm install david-ai`}/>
+
+### Basic Usage
+
+<CodePreviewTailwindClasses codeSnippet={
+`import { initPopovers } from 'david-ai';
+
+// Initialize popover functionality
+initPopovers();
+`
+}/>
+
+### Using with Global Access
+If you prefer, you can use the DavidAI global object instead of directly importing initPopovers:
+
+<CodePreviewTailwindClasses codeSnippet={
+`import * as DavidAI from 'david-ai';
+
+// Initialize popover functionality
+DavidAI.initPopovers();
+`
+}/>
+
+### Using with CDN
+You can include david-ai via a CDN and initialize popover functionality globally in the browser. Add the following script to your HTML file:
+
+<CodePreviewTailwindClasses codeSnippet={`<script src="https://cdn.jsdelivr.net/gh/creativetimofficial/david-ai@1.0.4/packages/dist/david-ai.min.js" defer></script>`}/>
+
+### HTML Code Example
+
+<CodePreviewTailwindClasses codeSnippet={
+`<div class="flex justify-center">
+  <button type="button" 
+          data-dui-toggle="popover" 
+          data-dui-placement="top"
+          data-dui-content="This is a popover content"
+          data-dui-title="Popover Title"
+          data-dui-popover-class="bg-white text-stone-800 border border-stone-200 rounded-md shadow-sm p-2 text-sm z-50"
+          class="inline-flex items-center justify-center border align-middle select-none font-sans font-medium text-center duration-300 ease-in disabled:opacity-50 disabled:shadow-none disabled:cursor-not-allowed focus:shadow-none text-sm py-2 px-4 shadow-sm hover:shadow-md bg-stone-800 hover:bg-stone-700 relative bg-gradient-to-b from-stone-700 to-stone-800 border-stone-900 text-stone-50 rounded-lg hover:bg-gradient-to-b hover:from-stone-800 hover:to-stone-800 hover:border-stone-900 after:absolute after:inset-0 after:rounded-[inherit] after:box-shadow after:shadow-[inset_0_1px_0px_rgba(255,255,255,0.25),inset_0_-2px_0px_rgba(0,0,0,0.35)] after:pointer-events-none transition antialiased">
+    Click me
+  </button>
+</div>`
+}/>
