--- a/docs/tabs.mdx
+++ b/docs/tabs.mdx
@@ -4,7 +4,7 @@ description: Implement tabs with Tailwind CSS using the David UI framework. Chec
 github: tabs
 ---
 
-<ScriptLoader src="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit@david-ui-js/dist%20/david-ui-tailwind.min.js" />
+<ScriptLoader />
 
 <InfoBadge />
 
@@ -73,6 +73,62 @@ Use this example to build a Tabs component with underline triggers and a subtle 
 ---
 
 ## Required Script
-The tabs component needs a required script file for the tab switching functionality to work. Add the script below to the bottom of your HTML file.
 
-<CodePreviewTailwindClasses codeSnippet={`<script src="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit@david-ui-js/dist%20/david-ui-tailwind.min.js" defer></script>`}/>
+The Tabs component in david-ai requires JavaScript to handle tab switching and content display. The library provides smooth transitions and interactive behavior through data attributes.
+
+### Installation
+
+To use the Tabs component in your project, you first need to install the `david-ai` library via npm:
+
+<CodePreviewTailwindClasses codeSnippet={`npm install david-ai`}/>
+
+### Basic Usage
+
+<CodePreviewTailwindClasses codeSnippet={
+`import { initTabs } from 'david-ai';
+
+// Initialize tabs functionality
+initTabs();
+`
+}/>
+
+### Using with Global Access
+If you prefer, you can use the DavidAI global object instead of directly importing initTabs:
+
+<CodePreviewTailwindClasses codeSnippet={
+`import * as DavidAI from 'david-ai';
+
+// Initialize tabs functionality
+DavidAI.initTabs();
+`
+}/>
+
+### Using with CDN
+You can include david-ai via a CDN and initialize tabs functionality globally in the browser. Add the following script to your HTML file:
+
+<CodePreviewTailwindClasses codeSnippet={`<script src="https://cdn.jsdelivr.net/gh/creativetimofficial/david-ai@1.0.4/packages/dist/david-ai.min.js" defer></script>`}/>
+
+### HTML Code Example
+
+<CodePreviewTailwindClasses codeSnippet={
+`<div class="relative tab-group">
+    <div class="flex bg-stone-100 p-0.5 relative rounded-lg" role="tablist">
+        <div class="absolute top-1 left-0.5 h-8 bg-white rounded-md shadow-sm transition-all duration-300 transform scale-x-0 translate-x-0 tab-indicator z-0"></div>
+
+        <a href="#" class="tab-link text-sm active inline-block py-2 px-4 text-stone-800 transition-all duration-300 relative z-1 mr-1" data-dui-tab-target="tab-1">
+          Tab 1
+        </a>
+        <a href="#" class="tab-link text-sm inline-block py-2 px-4 text-stone-800 transition-all duration-300 relative z-1 mr-1" data-dui-tab-target="tab-2">
+          Tab 2
+        </a>
+    </div>
+    <div class="mt-4 tab-content-container">
+        <div id="tab-1" class="tab-content text-stone-500 text-sm block">
+          <p>Content for Tab 1.</p>
+        </div>
+        <div id="tab-2" class="tab-content text-stone-500 text-sm hidden">
+          <p>Content for Tab 2.</p>
+        </div>
+    </div>
+</div>`
+}/>
